Week#2 - why this specific design pattern