@@ -65,7 +65,6 @@
                 <version>3.3.0</version>
                 <configuration>
                     <mainClass>com.example.helloworld.App</mainClass>
-                    <commandlineArgs>--enable-preview</commandlineArgs>
                     <executable>java</executable>
                     <arguments>
                         <argument>--enable-preview</argument>
